- 
    Bug 
- 
    Resolution: Fixed
- 
    P3: Somewhat important 
- 
    None
- 
    5.12.0
- 
    Windows 10
- 
        6272dddad (dev)
When a menubar spans across displays using different DPIs then opening menus on either display can show the menu in the wrong place. With the example attached, move the window so it cuts across different displays then open a menu on the one side and then one on the other side and observe that one of them is placed incorrectly.
This is only happening when HighDpi is enabled as it is not a problem without it.
- duplicates
- 
                    QTBUG-73001 [Win][HiDPI][Regression 5.12.0] global positions are incorrect -         
- Closed
 
-         
- relates to
- 
                    QTBUG-59794 REG 5.9.x->5.12: Windows: Menus have wrong size when AA_EnableHighDpiScaling is set -         
- Closed
 
-         
- 
                    QTBUG-72504 Moving QML window between screens with different DPI breaks QML layout and size -         
- Closed
 
-         
- 
                    QTBUG-76162 When using separate dual displays (no Xinerama), menus will popup on display 0 even if the parent is on display 1 -         
- Closed
 
-         
- 
                    QTBUG-53022 HighDPi: Update scale factor setting for devicePixelRatio scaling (AA_EnableHighDpiScaling) -         
- Closed
 
-         
- 
                    QTBUG-78320 [HighDPI multi-monitor Mixed screen scale factors] QCursor::setPos setting incorrect positions on non-primary monitor -         
- Closed
 
-         
- 
                    QTBUG-73014 When there is a mixture of windows with different DPIs then specifying a position for a window can end up being incorrectly placed -         
- Closed
 
-         
- resulted in
- 
                    QTBUG-77255 [Reg 5.12.4 -> 5.12.5] Mapping between local and global screen coordinates is broken when window on non-primary HighDPI display -         
- Closed
 
-         
- 
                    QTBUG-78158 Opening a window on a secondary display that has different resolution/DPI behaves oddly with QT_USE_NATIVE_WINDOWS=1 -         
- Closed
 
-         







